# RobotGripper

./: CMakeLists.txt
include/: RobotGripper.h  RobotGripperConstants.h
src/: CMakeLists.txt  RobotGripper.cpp  import numpy as np.py
tests/: CMakeLists.txt  RobotGripperAngleControlTest.cpp  RobotGripperSpeedTest.cpp  RobotGripperTest.cpp
